[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Tank/Tank.gd" type="Script" id=1]
[ext_resource path="res://Assets/Gfx/shotRed.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "ShotFire"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BarrelSprite/ShotFireSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Tank" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="TankSprite" type="Sprite" parent="."]

[node name="BarrelSprite" type="Sprite" parent="."]

[node name="ShotFireSprite" type="Sprite" parent="BarrelSprite"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="TankCollision" type="CollisionShape2D" parent="."]
visible = false

[node name="ExplosionParticle" type="Particles2D" parent="."]
visible = false
emitting = false

[node name="DestroyDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoolDownTmr" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Animations" type="AnimationPlayer" parent="."]
anims/ShotFire = SubResource( 1 )

[connection signal="timeout" from="DestroyDelay" to="." method="_on_DestroyDelay_timeout"]
[connection signal="timeout" from="CoolDownTmr" to="." method="_on_ShotLockTimer_timeout"]
